fix spacing in cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,5 +26,18 @@ button:hover, a:hover {
 .card-title {
   padding-top: 20px;
   text-align: center;
+}
 
+.card-text {
+  padding-bottom: 20px;
+}
+
+.card a {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 5px;
+}
+
+.card-deck-wrapper {
+  margin-bottom: 20px;
 }
